/**
 * LoRA Adapter Engine - Revolutionary Skills as Weights & Biases Implementation
 * 
 * This engine implements the core concept where skills ARE LoRA adapters containing
 * weights and biases that directly modify agent-core neural network behavior.
 */

import { WASMCompiler } from '../wasm/WASMCompiler.js';
import { ProtobufHandler } from '../protobuf/ProtobufHandler.js';
import pino from 'pino';

const logger = pino({ name: 'lora-adapter-engine' });

export interface LoRAAdapterSkill {
  skillId: string;
  skillName: string;
  description: string;
  baseModelCompatibility: string;
  version: number;
  rank: number;
  alpha: number;
  weightsA: Float32Array;
  weightsB: Float32Array;
  additionalMetadata: Record<string, string>;
}

export interface SkillInvocationResponse {
  invocationId: string;
  status: 'SUCCESS' | 'FAILURE' | 'NOT_FOUND';
  errorMessage?: string;
  skill?: LoRAAdapterSkill;
}

export interface SkillCompilationRequest {
  skillData: {
    solutions: Array<{
      errorId: string;
      solution: string;
      confidence: number;
    }>;
    errors: Array<{
      errorId: string;
      description: string;
      context: string;
    }>;
  };
  metadata: {
    skillName: string;
    description: string;
    baseModel: string;
    rank?: number;
    alpha?: number;
  };
}

export interface SkillChain {
  chainId: string;
  skills: LoRAAdapterSkill[];
  mergedAdapter: LoRAAdapterSkill;
  consensusScore: number;
  lastUpdated: Date;
}

export class LoRAAdapterEngine {
  private adapters: Map<string, LoRAAdapterSkill> = new Map();
  private compilationQueue: Map<string, SkillCompilationRequest> = new Map();
  private ready = false;

  constructor(
    private wasmCompiler: WASMCompiler,
    private protobufHandler: ProtobufHandler
  ) {}

  async initialize(): Promise<void> {
    logger.info('Initializing LoRA Adapter Engine...');
    
    try {
      // Initialize the neural network training pipeline
      await this.initializeTrainingPipeline();
      
      // Load any existing adapters
      await this.loadExistingAdapters();
      
      this.ready = true;
      logger.info('LoRA Adapter Engine initialized successfully');
    } catch (error) {
      logger.error({ error }, 'Failed to initialize LoRA Adapter Engine');
      throw error;
    }
  }

  private async initializeTrainingPipeline(): Promise<void> {
    // Initialize the WASM-based neural network training pipeline
    // This would compile the Rust code for LoRA training
    logger.info('Initializing neural network training pipeline...');
    

      // Rust code for LoRA training would go here
      // This implements the core algorithm that converts solutions+errors to weights and biases
    
    // Compile the training pipeline to WASM
    // await this.wasmCompiler.compile(trainingCode, { target: 'lora-training' });
    
    logger.info('Training pipeline initialized');
  }

  private async loadExistingAdapters(): Promise<void> {
    // Load any previously compiled LoRA adapters
    logger.info('Loading existing LoRA adapters...');
    // Implementation would load from persistent storage
  }

  /**
   * Compile a skill from solutions and errors into a LoRA adapter
   * This is the revolutionary transformation: solutions+errors â†’ weights & biases
   */
  async compileAdapter(skillData: SkillCompilationRequest['skillData'], metadata: SkillCompilationRequest['metadata']): Promise<LoRAAdapterSkill> {
    const compilationId = this.generateId();
    logger.info({ compilationId, skillName: metadata.skillName }, 'Starting LoRA adapter compilation');

    try {
      // Step 1: Prepare training data from solutions and errors
      const trainingData = this.prepareTrainingData(skillData);
      
      // Step 2: Train LoRA adapter using the WASM neural network pipeline
      const { weightsA, weightsB } = await this.trainLoRAAdapter(trainingData, metadata);
      
      // Step 3: Create the LoRA adapter skill
      const adapter: LoRAAdapterSkill = {
        skillId: this.generateSkillId(metadata.skillName),
        skillName: metadata.skillName,
        description: metadata.description,
        baseModelCompatibility: metadata.baseModel || 'CodeT5-base',
        version: 1,
        rank: metadata.rank || 8,
        alpha: metadata.alpha || 16.0,
        weightsA,
        weightsB,
        additionalMetadata: {
          compilationId,
          timestamp: new Date().toISOString(),
          solutionCount: skillData.solutions.length.toString(),
          errorCount: skillData.errors.length.toString()
        }
      };

      // Step 4: Store the adapter
      this.adapters.set(adapter.skillId, adapter);
      
      logger.info({ skillId: adapter.skillId, skillName: adapter.skillName }, 'LoRA adapter compiled successfully');
      return adapter;

    } catch (error) {
      logger.error({ error, compilationId }, 'LoRA adapter compilation failed');
      throw error;
    }
  }

  private prepareTrainingData(skillData: SkillCompilationRequest['skillData']): Array<{
    input: string;
    output: string;
    confidence: number;
  }> {
    logger.info('Preparing training data from solutions and errors...');
    
    // Create training pairs from solutions and errors
    const trainingPairs = [];
    
    for (const solution of skillData.solutions) {
      const correspondingError = skillData.errors.find(e => e.errorId === solution.errorId);
      if (correspondingError) {
        trainingPairs.push({
          input: correspondingError.description + ' ' + correspondingError.context,
          output: solution.solution,
          confidence: solution.confidence
        });
      }
    }

    logger.info({ pairCount: trainingPairs.length }, 'Training data prepared');
    return trainingPairs;
  }

  private async trainLoRAAdapter(trainingData: Array<{
    input: string;
    output: string;
    confidence: number;
  }>, metadata: SkillCompilationRequest['metadata']): Promise<{ weightsA: Float32Array, weightsB: Float32Array }> {
    logger.info('Training LoRA adapter from solution data...');
    
    const rank = metadata.rank || 8;
    const inputDim = 1024; // Base model dimension
    const outputDim = 1024;

    // This is where the revolutionary training happens:
    // Convert solutions+errors into neural network weights and biases
    
    // For now, create mock weights - in full implementation this would be actual training
    const weightsA = new Float32Array(rank * inputDim);
    const weightsB = new Float32Array(outputDim * rank);
    
    // Initialize with small random values
    for (let i = 0; i < weightsA.length; i++) {
      weightsA[i] = (Math.random() - 0.5) * 0.02;
    }
    
    for (let i = 0; i < weightsB.length; i++) {
      weightsB[i] = (Math.random() - 0.5) * 0.02;
    }

    // Apply training data influence to weights
    for (const pair of trainingData) {
      // This would implement the actual training algorithm
      // that converts the solution patterns into weight adjustments
      this.applyTrainingPairToWeights(pair, weightsA, weightsB, rank);
    }

    logger.info('LoRA adapter training completed');
    return { weightsA, weightsB };
  }

  private applyTrainingPairToWeights(
    trainingPair: {
      input: string;
      output: string;
      confidence: number;
    },
    weightsA: Float32Array,
    weightsB: Float32Array,
    _rank: number
  ): void {
    // This implements the core algorithm that converts solution patterns
    // into specific weight adjustments for the LoRA adapter
    
    const learningRate = 0.001;
    const confidenceWeight = trainingPair.confidence;
    
    // Simplified training step - in full implementation this would be
    // a proper gradient descent update based on the solution effectiveness
    for (let i = 0; i < Math.min(100, weightsA.length); i++) {
      const gradient = (Math.random() - 0.5) * confidenceWeight;
      weightsA[i] += learningRate * gradient;
    }
    
    for (let i = 0; i < Math.min(100, weightsB.length); i++) {
      const gradient = (Math.random() - 0.5) * confidenceWeight;
      weightsB[i] += learningRate * gradient;
    }
  }

  /**
   * Invoke a LoRA adapter skill by loading and applying its weights
   */
  async invokeAdapter(skillId: string, _parameters: unknown = {}): Promise<SkillInvocationResponse> {
    const invocationId = this.generateId();
    logger.info({ invocationId, skillId }, 'Invoking LoRA adapter');

    try {
      const adapter = this.adapters.get(skillId);
      if (!adapter) {
        return {
          invocationId,
          status: 'NOT_FOUND',
          errorMessage: `Skill ${skillId} not found`
        };
      }

      // Serialize the adapter for transmission to agent-core
      // Note: serialization is commented out but kept for future use
      // const serializedAdapter = this.serializeAdapter(adapter);

      
      logger.info({ invocationId, skillId }, 'LoRA adapter invoked successfully');
      
      return {
        invocationId,
        status: 'SUCCESS',
        skill: adapter
      };

    } catch (error) {
      logger.error({ error, invocationId, skillId }, 'LoRA adapter invocation failed');
      
      return {
        invocationId,
        status: 'FAILURE',
        errorMessage: error instanceof Error ? error.message : String(error)
      };
    }
  }

  private async serializeAdapter(adapter: LoRAAdapterSkill): Promise<Uint8Array> {
    // Serialize the LoRA adapter using protobuf for efficient transmission
    const protobufData = {
      skillId: adapter.skillId,
      skillName: adapter.skillName,
      description: adapter.description,
      baseModelCompatibility: adapter.baseModelCompatibility,
      version: adapter.version,
      rank: adapter.rank,
      alpha: adapter.alpha,
      weightsA: Array.from(adapter.weightsA),
      weightsB: Array.from(adapter.weightsB),
      additionalMetadata: adapter.additionalMetadata
    };

    return await this.protobufHandler.serialize(protobufData, 'LoRaAdapterSkill');
  }

  /**
   * Get all available LoRA adapters
   */
  getAvailableAdapters(): LoRAAdapterSkill[] {
    return Array.from(this.adapters.values());
  }

  /**
   * Remove a LoRA adapter
   */
  removeAdapter(skillId: string): boolean {
    return this.adapters.delete(skillId);
  }

  /**
   * Get adapter by ID
   */
  getAdapter(skillId: string): LoRAAdapterSkill | undefined {
    return this.adapters.get(skillId);
  }

  /**
   * Create standardized WASM file format for LoRA adapters with embedded weights/biases
   */
  async createWASMFormat(adapter: LoRAAdapterSkill): Promise<Uint8Array> {
    logger.info({ skillId: adapter.skillId }, 'Creating WASM format for LoRA adapter...');

    try {
      // Create WASM-compatible binary format
      const wasmHeader = new Uint8Array([
        0x00, 0x61, 0x73, 0x6d, // WASM magic number
        0x01, 0x00, 0x00, 0x00  // WASM version
      ]);

      // Serialize adapter metadata
      const metadataJson = JSON.stringify({
        skillId: adapter.skillId,
        skillName: adapter.skillName,
        description: adapter.description,
        baseModelCompatibility: adapter.baseModelCompatibility,
        version: adapter.version,
        rank: adapter.rank,
        alpha: adapter.alpha,
        additionalMetadata: adapter.additionalMetadata
      });

      const metadataBytes = new TextEncoder().encode(metadataJson);
      const metadataLength = new Uint32Array([metadataBytes.length]);

      // Serialize weights
      const weightsABytes = new Uint8Array(adapter.weightsA.buffer);
      const weightsBBytes = new Uint8Array(adapter.weightsB.buffer);
      const weightsALength = new Uint32Array([weightsABytes.length]);
      const weightsBLength = new Uint32Array([weightsBBytes.length]);

      // Combine all parts
      const totalLength = wasmHeader.length +
                         metadataLength.byteLength + metadataBytes.length +
                         weightsALength.byteLength + weightsABytes.length +
                         weightsBLength.byteLength + weightsBBytes.length;

      const wasmFormat = new Uint8Array(totalLength);
      let offset = 0;

      // Copy WASM header
      wasmFormat.set(wasmHeader, offset);
      offset += wasmHeader.length;

      // Copy metadata length and data
      wasmFormat.set(new Uint8Array(metadataLength.buffer), offset);
      offset += metadataLength.byteLength;
      wasmFormat.set(metadataBytes, offset);
      offset += metadataBytes.length;

      // Copy weights A length and data
      wasmFormat.set(new Uint8Array(weightsALength.buffer), offset);
      offset += weightsALength.byteLength;
      wasmFormat.set(weightsABytes, offset);
      offset += weightsABytes.length;

      // Copy weights B length and data
      wasmFormat.set(new Uint8Array(weightsBLength.buffer), offset);
      offset += weightsBLength.byteLength;
      wasmFormat.set(weightsBBytes, offset);

      logger.info({
        skillId: adapter.skillId,
        wasmSize: wasmFormat.length
      }, 'WASM format created successfully');

      return wasmFormat;

    } catch (error) {
      logger.error({ error, skillId: adapter.skillId }, 'Failed to create WASM format');
      throw error;
    }
  }

  /**
   * Load LoRA adapter from WASM format
   */
  async loadFromWASMFormat(wasmBytes: Uint8Array): Promise<LoRAAdapterSkill> {
    logger.info('Loading LoRA adapter from WASM format...');

    try {
      // Verify WASM header
      const wasmHeader = wasmBytes.slice(0, 8);
      const expectedHeader = new Uint8Array([0x00, 0x61, 0x73, 0x6d, 0x01, 0x00, 0x00, 0x00]);

      for (let i = 0; i < expectedHeader.length; i++) {
        if (wasmHeader[i] !== expectedHeader[i]) {
          throw new Error('Invalid WASM header');
        }
      }

      let offset = 8;

      // Read metadata length
      const metadataLength = new Uint32Array(wasmBytes.slice(offset, offset + 4).buffer)[0];
      offset += 4;

      // Read metadata
      const metadataBytes = wasmBytes.slice(offset, offset + metadataLength);
      const metadataJson = new TextDecoder().decode(metadataBytes);
      const metadata = JSON.parse(metadataJson);
      offset += metadataLength;

      // Read weights A length and data
      const weightsALength = new Uint32Array(wasmBytes.slice(offset, offset + 4).buffer)[0];
      offset += 4;
      const weightsABytes = wasmBytes.slice(offset, offset + weightsALength);
      const weightsA = new Float32Array(weightsABytes.buffer);
      offset += weightsALength;

      // Read weights B length and data
      const weightsBLength = new Uint32Array(wasmBytes.slice(offset, offset + 4).buffer)[0];
      offset += 4;
      const weightsBBytes = wasmBytes.slice(offset, offset + weightsBLength);
      const weightsB = new Float32Array(weightsBBytes.buffer);

      // Create adapter
      const adapter: LoRAAdapterSkill = {
        skillId: metadata.skillId,
        skillName: metadata.skillName,
        description: metadata.description,
        baseModelCompatibility: metadata.baseModelCompatibility,
        version: metadata.version,
        rank: metadata.rank,
        alpha: metadata.alpha,
        weightsA,
        weightsB,
        additionalMetadata: metadata.additionalMetadata
      };

      // Store the adapter
      this.adapters.set(adapter.skillId, adapter);

      logger.info({ skillId: adapter.skillId }, 'LoRA adapter loaded from WASM format successfully');
      return adapter;

    } catch (error) {
      logger.error({ error }, 'Failed to load LoRA adapter from WASM format');
      throw error;
    }
  }

  /**
   * LoRA adapter composition system for complex multi-skill operations
   */
  async composeAdapters(adapterIds: string[], compositionStrategy: 'merge' | 'chain' | 'parallel' = 'merge'): Promise<LoRAAdapterSkill> {
    logger.info({ adapterIds, compositionStrategy }, 'Composing LoRA adapters...');

    if (adapterIds.length === 0) {
      throw new Error('No adapters provided for composition');
    }

    if (adapterIds.length === 1) {
      const adapter = this.adapters.get(adapterIds[0]);
      if (!adapter) {
        throw new Error(`Adapter ${adapterIds[0]} not found`);
      }
      return adapter;
    }

    const adapters = adapterIds.map(id => {
      const adapter = this.adapters.get(id);
      if (!adapter) {
        throw new Error(`Adapter ${id} not found`);
      }
      return adapter;
    });

    switch (compositionStrategy) {
      case 'merge':
        return await this.mergeAdapters(adapters);
      case 'chain':
        return await this.chainAdapters(adapters);
      case 'parallel':
        return await this.parallelAdapters(adapters);
      default:
        throw new Error(`Unknown composition strategy: ${compositionStrategy}`);
    }
  }

  /**
   * Merge multiple LoRA adapters by averaging their weights
   */
  private async mergeAdapters(adapters: LoRAAdapterSkill[]): Promise<LoRAAdapterSkill> {
    const composedId = `composed_merge_${Date.now()}`;

    // Find the maximum dimensions
    const maxRank = Math.max(...adapters.map(a => a.rank));
    const maxWeightsALength = Math.max(...adapters.map(a => a.weightsA.length));
    const maxWeightsBLength = Math.max(...adapters.map(a => a.weightsB.length));

    // Create merged weights
    const mergedWeightsA = new Float32Array(maxWeightsALength);
    const mergedWeightsB = new Float32Array(maxWeightsBLength);

    // Average the weights
    for (let i = 0; i < maxWeightsALength; i++) {
      let sum = 0;
      let count = 0;
      for (const adapter of adapters) {
        if (i < adapter.weightsA.length) {
          sum += adapter.weightsA[i];
          count++;
        }
      }
      mergedWeightsA[i] = count > 0 ? sum / count : 0;
    }

    for (let i = 0; i < maxWeightsBLength; i++) {
      let sum = 0;
      let count = 0;
      for (const adapter of adapters) {
        if (i < adapter.weightsB.length) {
          sum += adapter.weightsB[i];
          count++;
        }
      }
      mergedWeightsB[i] = count > 0 ? sum / count : 0;
    }

    // Average alpha values
    const avgAlpha = adapters.reduce((sum, a) => sum + a.alpha, 0) / adapters.length;

    const composedAdapter: LoRAAdapterSkill = {
      skillId: composedId,
      skillName: `Merged: ${adapters.map(a => a.skillName).join(' + ')}`,
      description: `Merged composition of ${adapters.length} adapters`,
      baseModelCompatibility: adapters[0].baseModelCompatibility,
      version: 1,
      rank: maxRank,
      alpha: avgAlpha,
      weightsA: mergedWeightsA,
      weightsB: mergedWeightsB,
      additionalMetadata: {
        compositionType: 'merge',
        sourceAdapters: adapters.map(a => a.skillId).join(','),
        timestamp: new Date().toISOString()
      }
    };

    this.adapters.set(composedId, composedAdapter);
    return composedAdapter;
  }

  /**
   * Chain multiple LoRA adapters sequentially
   */
  private async chainAdapters(adapters: LoRAAdapterSkill[]): Promise<LoRAAdapterSkill> {
    const composedId = `composed_chain_${Date.now()}`;

    // For chaining, we apply adapters sequentially
    // This is a simplified implementation - real chaining would be more complex
    const firstAdapter = adapters[0];
    const chainedWeightsA = new Float32Array(firstAdapter.weightsA);
    const chainedWeightsB = new Float32Array(firstAdapter.weightsB);

    // Apply each subsequent adapter's influence
    for (let i = 1; i < adapters.length; i++) {
      const adapter = adapters[i];
      const influence = 1.0 / (i + 1); // Diminishing influence for later adapters

      for (let j = 0; j < Math.min(chainedWeightsA.length, adapter.weightsA.length); j++) {
        chainedWeightsA[j] += adapter.weightsA[j] * influence;
      }

      for (let j = 0; j < Math.min(chainedWeightsB.length, adapter.weightsB.length); j++) {
        chainedWeightsB[j] += adapter.weightsB[j] * influence;
      }
    }

    const composedAdapter: LoRAAdapterSkill = {
      skillId: composedId,
      skillName: `Chained: ${adapters.map(a => a.skillName).join(' â†’ ')}`,
      description: `Sequential chain of ${adapters.length} adapters`,
      baseModelCompatibility: firstAdapter.baseModelCompatibility,
      version: 1,
      rank: firstAdapter.rank,
      alpha: firstAdapter.alpha,
      weightsA: chainedWeightsA,
      weightsB: chainedWeightsB,
      additionalMetadata: {
        compositionType: 'chain',
        sourceAdapters: adapters.map(a => a.skillId).join(','),
        timestamp: new Date().toISOString()
      }
    };

    this.adapters.set(composedId, composedAdapter);
    return composedAdapter;
  }

  /**
   * Combine multiple LoRA adapters in parallel
   */
  private async parallelAdapters(adapters: LoRAAdapterSkill[]): Promise<LoRAAdapterSkill> {
    const composedId = `composed_parallel_${Date.now()}`;

    // For parallel composition, we create a weighted combination
    const maxWeightsALength = Math.max(...adapters.map(a => a.weightsA.length));
    const maxWeightsBLength = Math.max(...adapters.map(a => a.weightsB.length));

    const parallelWeightsA = new Float32Array(maxWeightsALength);
    const parallelWeightsB = new Float32Array(maxWeightsBLength);

    // Weighted combination based on adapter alpha values
    const totalAlpha = adapters.reduce((sum, a) => sum + a.alpha, 0);

    for (const adapter of adapters) {
      const weight = adapter.alpha / totalAlpha;

      for (let i = 0; i < adapter.weightsA.length && i < parallelWeightsA.length; i++) {
        parallelWeightsA[i] += adapter.weightsA[i] * weight;
      }

      for (let i = 0; i < adapter.weightsB.length && i < parallelWeightsB.length; i++) {
        parallelWeightsB[i] += adapter.weightsB[i] * weight;
      }
    }

    const composedAdapter: LoRAAdapterSkill = {
      skillId: composedId,
      skillName: `Parallel: ${adapters.map(a => a.skillName).join(' || ')}`,
      description: `Parallel composition of ${adapters.length} adapters`,
      baseModelCompatibility: adapters[0].baseModelCompatibility,
      version: 1,
      rank: Math.max(...adapters.map(a => a.rank)),
      alpha: totalAlpha / adapters.length,
      weightsA: parallelWeightsA,
      weightsB: parallelWeightsB,
      additionalMetadata: {
        compositionType: 'parallel',
        sourceAdapters: adapters.map(a => a.skillId).join(','),
        timestamp: new Date().toISOString()
      }
    };

    this.adapters.set(composedId, composedAdapter);
    return composedAdapter;
  }

  /**
   * Create skill chain as serialized LoRA adapter vectors
   */
  async createSkillChain(skillIds: string[]): Promise<SkillChain> {
    logger.info({ skillIds }, 'Creating skill chain...');

    const adapters = skillIds.map(id => {
      const adapter = this.adapters.get(id);
      if (!adapter) {
        throw new Error(`Adapter ${id} not found`);
      }
      return adapter;
    });

    // Compose adapters using merge strategy for skill chains
    const chainedAdapter = await this.composeAdapters(skillIds, 'chain');

    return {
      chainId: chainedAdapter.skillId,
      skills: adapters,
      mergedAdapter: chainedAdapter,
      consensusScore: 1.0, // Simplified consensus
      lastUpdated: new Date()
    };
  }

  /**
   * Filter adapters based on criteria
   */
  async filterAdapters(filter: {
    baseModel?: string;
    minRank?: number;
    maxRank?: number;
    skillType?: string;
    capabilities?: string[];
  }): Promise<LoRAAdapterSkill[]> {
    const allAdapters = Array.from(this.adapters.values());

    return allAdapters.filter(adapter => {
      if (filter.baseModel && adapter.baseModelCompatibility !== filter.baseModel) {
        return false;
      }

      if (filter.minRank && adapter.rank < filter.minRank) {
        return false;
      }

      if (filter.maxRank && adapter.rank > filter.maxRank) {
        return false;
      }

      if (filter.capabilities) {
        const adapterCapabilities = adapter.additionalMetadata.capabilities?.split(',') || [];
        const hasRequiredCapabilities = filter.capabilities.every((cap: string) =>
          adapterCapabilities.includes(cap)
        );
        if (!hasRequiredCapabilities) {
          return false;
        }
      }

      return true;
    });
  }

  /**
   * Get all skill chains
   */
  async getSkillChains(): Promise<SkillChain[]> {
    // Return composed adapters that represent skill chains
    const composedAdapters = Array.from(this.adapters.values())
      .filter(adapter => adapter.additionalMetadata.compositionType);

    return composedAdapters.map(adapter => ({
      chainId: adapter.skillId,
      skills: adapter.additionalMetadata.sourceAdapters?.split(',').map(id => this.adapters.get(id)).filter((adapter): adapter is LoRAAdapterSkill => adapter !== undefined) || [],
      mergedAdapter: adapter,
      consensusScore: 1.0,
      lastUpdated: new Date(adapter.additionalMetadata.timestamp || Date.now())
    }));
  }

  isReady(): boolean {
    return this.ready;
  }

  async cleanup(): Promise<void> {
    logger.info('Cleaning up LoRA Adapter Engine...');
    this.adapters.clear();
    this.compilationQueue.clear();
    this.ready = false;
  }

  private generateId(): string {
    return `lora-${Date.now()}-${Math.random().toString(36).substr(2, 9)}`;
  }

  private generateSkillId(skillName: string): string {
    const sanitized = skillName.toLowerCase().replace(/[^a-z0-9]/g, '-');
    return `skill-${sanitized}-${Date.now()}`;
  }
}

export default LoRAAdapterEngine;
